# SKILLISSUE

./: .gitignore  Caretaker.cpp  Caretaker.h  City.cpp  City.h  GameState.h  GameStateEditor.cpp  GameStateEditor.h  GameStateStart.cpp  GameStateStart.h  Map.cpp  Memento.cpp  Memento.h  Proxy.cpp  Proxy.h  README.md  ResourceManager.h  et --hard <commit-hash>
Report/: Report.docx  Research Brief on Urban Development and City Management Principles.docx
SFML_code/: AnimationHandler.cpp  CDReceiver.cpp  CDReceiver.h  Caretaker.cpp  Caretaker.h  City.cpp  City.h  CityMediator.cpp  CityMediator.h  Command.h  Commercial.cpp  CommercialFactory.h  CreateAndDistributeGoods.cpp  CreateAndDistributeGoods.h  DRReceiver.cpp  DRReceiver.h  DReceiver.cpp  DReceiver.h  DistributePopulation.cpp  DistributePopulation.h  DistributeResources.cpp  DistributeResources.h  Doxyfile  Firestation.cpp  Firestation.h  FirestationFactory.h  Forest.cpp  Forest.h  Game.cpp  Game.h  GameState.h  GameStateEditor.cpp  GameStateEditor.h  GameStatePaused.cpp  GameStatePaused.h  GetPowerCommand.h  Grass.cpp  GrassFactory.h  Gui.cpp  Hospital.cpp  (+54 more)
SFML_code/MediatorTesting/: CMakeLists.txt  MediatorTestMain.cpp
SFML_code/ProxyUnitTests/: CMakeLists.txt  ProxyTestMain.cpp
SFML_code/ResourceManagerTesting/: ResourceManagerTestMain.cpp
SFML_code/ResourceMangerTesting/: README.txt  ResourceManagerTestMain.cpp
SFML_code/TaxTesting/: CMakeLists.txt  TaxesTest.cpp
SFML_code/TileTesting/: CMakeLists.txt  TileTests.cpp
SFML_code/docs/html/: AnimationHandler_8h_source.html  Caretaker_8h_source.html  Command_8h_source.html  CommercialFactory_8h_source.html  FirestationFactory_8h_source.html  Forest_8h_source.html  GetPowerCommand_8h_source.html  GrassFactory_8h_source.html  IndustrialFactory_8h_source.html  LandmarkFactory_8h_source.html  Map_8h_source.html  Memento_8h_source.html  PowerPlantFactory_8h_source.html  ResidentialFactory_8h_source.html  Residential_8h_source.html  Road_8h_source.html  SCReceiver_8h_source.html  Tile_8h_source.html  classAnimation-members.html  classAnimation.html  classAnimationHandler-members.html  classAnimationHandler.html  classCaretaker-members.html  classCaretaker.html  classCity-members.html  classCity.html  classCityMediator-members.html  classCityMediator__coll__graph.md5  classCommand-members.html  classCommercial-members.html  classCommercial__inherit__graph.map  classCommercial__inherit__graph.md5  classCreateAndDistributeGoods.html  classCreateAndDistributeGoods__coll__graph.map  classCreateAndDistributeGoods__inherit__graph.map  classDistributePopulation__coll__graph.map  classDistributePopulation__inherit__graph.md5  classDistributeResources__coll__graph.map  classFirestationFactory__inherit__graph.map  classForestFactory.html  (+105 more)
SFML_code/docs/latex/: annotated.tex  classAnimation.tex  classAnimationHandler.tex  classCDReceiver.tex  classCaretaker.tex  classCity__coll__graph.md5  classCommercialFactory__inherit__graph.md5  classCommercial__inherit__graph.md5  classCreateAndDistributeGoods__coll__graph.md5  classDRReceiver.tex  classDistributePopulation.tex  classFirestationFactory.tex  classForest__inherit__graph.md5  classGameState.tex  classGameStatePaused__inherit__graph.md5  classGameStateStart.tex  classGameStateStart__coll__graph.md5  classGameStateStart__inherit__graph.md5  classGameState__coll__graph.md5  classGui__coll__graph.md5  classHighTax.tex  classHospital.tex  classIndustrial.tex  classIndustrialFactory.tex  classIndustrial__coll__graph.md5  classIndustrial__inherit__graph.md5  classLandmark.tex  classLandmarkFactory__coll__graph.md5  classLowTax__coll__graph.md5  classPowerPlantFactory.tex  classResidential.tex  classResidentialFactory__inherit__graph.md5  classResidential__inherit__graph.md5  classResourceManagerTest.tex  classResourceManagerTest__coll__graph.md5  classRoadFactory.tex  classRoadFactory__coll__graph.md5  classSCReceiver.tex  classSewagePlant__coll__graph.md5  classTileFactory.tex  (+6 more)
System/: AnimationHandler.h  CDReceiver.cpp  CDReceiver.h  Caretaker.cpp  Caretaker.h  City.h  CityMediator.cpp  Command.h  Commercial.cpp  Commercial.h  CreateAndDistributeGoods.cpp  DRReceiver.h  DReceiver.h  DistributePopulation.h  DistributeResources.cpp  DistributeResources.h  Firestation.cpp  Firestation.h  FirestationFactory.cpp  ForestFactory.h  Game.h  GameState.h  GameStateEditor.cpp  GameStateEditor.h  GameStatePaused.cpp  GameStateStart.h  GetPowerCommand.h  Grass.h  Gui.h  GuiEntry.h  GuiStyle.h  HighTax.h  Hospital.cpp  HospitalFactory.cpp  HospitalFactory.h  Industrial.h  Landmark.cpp  LandmarkFactory.h  LowTax.h  Memento.cpp  (+34 more)
System/CityMediatorTesting/: CMakeLists.txt  CityMediatorTestMain.cpp
System/Mementotests/: CMakeLists.txt  Mementotests.cpp
System/ResourceManagerTesting/: CMakeLists.txt  README.txt  ResourceManagerTestMain.cpp
System/ResourceTesting/: ResourcesTesting.cpp
System/docs/html/: CDReceiver_8h_source.html  Caretaker_8h_source.html  CityMediator_8h_source.html  City_8h_source.html  Commercial_8h_source.html  CreateAndDistributeGoods_8h_source.html  DRReceiver_8h_source.html  DReceiver_8h_source.html  DistributePopulation_8h_source.html  Firestation_8h_source.html  (+303 more)
Uml/: 1.City Builder Simulation UML main.vpp  City Builder Simulation UML V1 (Justin).vpp  City Builder Simulation UML V1 (Justin).vpp.bak_004d  City Builder Simulation UML V1 (Justin).vpp.bak_005d  UMLClassForSFM+MediatorAndMemento.vpp  UMLClassForSFML.vpp  UMLClassForSFML.vpp.bak_001d  UMLClassForSFML.vpp.bak_002d  UMLClassForSFML.vpp.bak_003d  UMLClassForSFML.vpp.bak_004d  UMLClassForSFML.vpp.bak_005d  UMLClassForSFML.vpp.bak_006d  UMLClassForSFMLSingletonPush.vpp
(+233 files in other folders)
